[gd_scene load_steps=2 format=3 uid="uid://qggtxmj7vmeo"]

[ext_resource type="Script" uid="uid://b7yu1d82aiw7m" path="res://scenes/pause_menu.gd" id="1_n87rw"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n87rw")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -25.0
offset_right = 50.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "Close"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.0
offset_top = 100.0
offset_right = 62.0
offset_bottom = 145.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "PAUSED"

[node name="VolumeSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -84.0
offset_right = 100.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2

[node name="VolumeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 544.0
offset_top = 216.0
offset_right = 603.0
offset_bottom = 239.0
text = "Volume"

[connection signal="pressed" from="Button" to="." method="_on_close_pause_button_pressed"]
[connection signal="value_changed" from="VolumeSlider" to="." method="_on_volume_slider_value_changed"]
